Fix misalignment between 'Disconnect' button and 'Disconnecting' indicator

--- a/client/apps/stripe-connect-account/style.scss
+++ b/client/apps/stripe-connect-account/style.scss
@@ -14,6 +14,8 @@
 	}
 
 	.stripe__connect-account-disconnect {
+		line-height: 21px;
+		display: inline-block;
 		vertical-align: bottom;
 	}
 }
